--- a/main2.html
+++ b/main2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="contain">
-        <h2 class="text">THERE IS NO SHORTCUT,RIGHT THINGS COMES AT RIGHT TIME</h2>
+        <h2 class="text">Everything comes to you at the perfect time</h2>
     </div>
     <script src="script1.js"></script>
 </body>
